# one-key-input

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.en.md  README.md  config.example.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
cmake/: SherpaOnnx.cmake
core/: CMakeLists.txt
core/resources/: onekey.rc  resource.h
core/src/: main.cpp
core/src/app/: Application.cpp  Application.h  Autostart.cpp  Autostart.h  ConfigWatcher.cpp  ConfigWatcher.h  SelfRestart.cpp  SelfRestart.h
core/src/asr/: AsrFactory.cpp  AsrFactory.h  AzureRestAsrEngine.cpp  AzureRestAsrEngine.h  AzureStreamAsrEngine.cpp  AzureStreamAsrEngine.h  IAsrEngine.cpp  IAsrEngine.h  SherpaAsrEngine.cpp  SherpaAsrEngine.h
core/src/audio/: SoundCues.cpp  SoundCues.h  WasapiCapture.cpp  WasapiCapture.h
core/src/config/: Config.cpp  Config.h
core/src/focus/: ContextExtractor.cpp  ContextExtractor.h  FocusContext.cpp  FocusContext.h
core/src/hotkey/: HotkeyManager.cpp  HotkeyManager.h
core/src/inject/: ClipboardInjector.cpp  ClipboardInjector.h  IInjector.h  InjectorStrategy.cpp  InjectorStrategy.h  SendInputUnicodeInjector.cpp  SendInputUnicodeInjector.h
core/src/log/: Logger.cpp  Logger.h
core/src/net/: HttpClient.cpp  HttpClient.h
core/src/polish/: IPolisher.h  OpenAIPolisher.cpp  OpenAIPolisher.h  PolisherFactory.cpp  PolisherFactory.h  TranslationPrompt.cpp  TranslationPrompt.h
core/src/session/: DictationSession.cpp  DictationSession.h  EventBus.cpp  EventBus.h  HotkeyBehaviorMachine.cpp  HotkeyBehaviorMachine.h
core/src/ui/: IconFactory.cpp  IconFactory.h  OverlayWindow.cpp  OverlayWindow.h  TrayIcon.cpp  TrayIcon.h
core/src/util/: Strings.cpp  Strings.h  WinHelpers.cpp  WinHelpers.h
core/tests/: CMakeLists.txt
core/tests/asr/: AsrFactoryTest.cpp  SherpaAsrEngineTest.cpp
core/tests/config/: ConfigTest.cpp
core/tests/hotkey/: HotkeyManagerTest.cpp
core/tests/inject/: InjectorStrategyTest.cpp
core/tests/polish/: PolisherFactoryTest.cpp  TranslationPromptTest.cpp
core/tests/session/: EventBusTest.cpp  HotkeyBehaviorMachineTest.cpp
core/tests/util/: StringsTest.cpp  WinHelpersTest.cpp
docs/: privacy-mode.md
scripts/: build.bat  stage-portable.ps1
settings/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
settings/src/: App.tsx  ErrorBoundary.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
settings/src-tauri/: Cargo.toml  tauri.conf.json
settings/src-tauri/capabilities/: default.json
settings/src-tauri/icons/: icon.icns
settings/src-tauri/src/: lib.rs  main.rs
settings/src/__tests__/: App.test.tsx  ErrorBoundary.test.tsx  config.test.ts  i18n.test.ts  setup.ts
settings/src/i18n/: dicts.ts
