[package]
name = "onekey-settings"
version = "0.1.0"
description = "One-Key Input Settings"
authors = ["zwcih <zwcih@qq.com>"]
edition = "2021"

[lib]
name = "onekey_settings_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3"
serde_json = { version = "1", features = ["preserve_order"] }
